# pacman

./: .flake8  .gitignore  LICENSE  Makefile  pac-man.py  pyproject.toml
src/: entities.py  entity_data.py
