[project]
name = "pacman"
version = "0.0.1"
description = "The classic pacman game implemented in python & arcade"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "arcade>=3.3.3",
    "mazegenerator",
    "pydantic>=2.13.4",
]

[tool.uv.sources]
mazegenerator= { path = "wheels/mazegenerator-2.0.2-py3-none-any.whl" }

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
mypy_path = "stubs"

[tool.ruff]
line-length = 79
[tool.ruff.lint]
select = ["E", "F", "B", "I"]
